--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ python:
 
 addons:
   postgresql: "9.3"
+  apt:
+    packages:
+    - postgresql-9.3-postgis-2.1
 
 install:
   - pip install coveralls
