--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   - cd django_project
   - python manage.py makemigrations
   - python manage.py migrate
-  - coverage run manage.py test
+  - coverage run --source='.' manage.py test --settings core.settings.test
 
 after_success:
   - coveralls
