--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
   - cd django_project
   - python manage.py makemigrations
   - python manage.py migrate
-  - coverage run manage.py test base changes github_issue certification
+  - coverage run manage.py test
 
 after_success:
   - coveralls
