--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ sudo: false
 dist: trusty
 
 addons:
-  postgresql: "9.3"
+  postgresql: "9.5"
   apt:
     packages:
-    - postgresql-9.3-postgis-2.3
+    - postgresql-9.5-postgis-2.3
 
 install:
   - pip install coveralls
@@ -36,7 +36,7 @@ script:
   - cd django_project
   - python manage.py makemigrations
   - python manage.py migrate
-  - coverage run manage.py test core certification
+  - coverage run manage.py test
 
 after_success:
   - coveralls
