--- a/deployment/sites-enabled/default.conf
+++ b/deployment/sites-enabled/default.conf
@@ -18,7 +18,7 @@ server {
     # the port your site will be served on
     listen      8080;
     # the domain name it will serve for
-    server_name *;
+    server_name "";
     charset     utf-8;
 
     # max upload size, adjust to taste
