--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,9 @@ script:
   - cd deployment
   - make flake8
   - cd ../django_project
-  - python manage.py makemigrations
-  - python manage.py migrate
-  - python manage.py collectstatic --noinput --verbosity 0
+  - python manage.py makemigrations --enable-unicode=ucs4
+  - python manage.py migrate --enable-unicode=ucs4
+  - python manage.py collectstatic --noinput --verbosity 0 --enable-unicode=ucs4
   - coverage run manage.py test
 
 after_success:
