--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ env:
     - DJANGO_SETTINGS_MODULE=core.settings.test_travis
 
 sudo: false
-dist: trusty
 
 python:
   - '2.7'
@@ -35,9 +34,9 @@ script:
   - cd deployment
   - make flake8
   - cd ../django_project
-  - python manage.py makemigrations --enable-unicode=ucs4
-  - python manage.py migrate --enable-unicode=ucs4
-  - python manage.py collectstatic --noinput --verbosity 0 --enable-unicode=ucs4
+  - python manage.py makemigrations
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput --verbosity 0
   - coverage run manage.py test
 
 after_success:
