--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - DATABASE_URL='postgres://postgres:@localhost:5432/test_db'
     - SECRET_KEY='tT\xd7\xb06\xf7\x9b\xff\x0fZL\xca\xca\x11\xefM\xacr\xfb\xdf\xca\x9b'
     - DJANGO_SETTINGS_MODULE=core.settings.test_travis
+    - enable-unicode=ucs4
 
 sudo: false
 dist: trusty
@@ -32,8 +33,6 @@ before_script:
   - psql -c 'CREATE EXTENSION postgis;' -U postgres -d test_db
 
 script:
-  - ./configure --enable-unicode=ucs4
-  - import sys; print sys.maxunicode
   - cd deployment
   - make flake8
   - cd ../django_project
