--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
     - postgresql-9.3-postgis-2.3
 
 install:
+  - python -c "import sys; print ('UCS4 build' if sys.maxunicode > 65535 else 'UCS2 build')"
   - pip install codecov
   - pip install -r REQUIREMENTS-dev.txt
 
